Initial class layout (as per the class diagram)

--- a/build.gradle
+++ b/build.gradle
@@ -28,5 +28,11 @@ dependencies {
     testImplementation 'junit:junit:4.12'
 }
 
+jar {
+    manifest {
+        attributes 'Main-Class': 'CoffeeShop.CoffeeShopManager'
+    }
+}
+
 // Define the main class for the application
-mainClassName = 'CoffeeShop.App'
+mainClassName = 'CoffeeShop.CoffeeShopManager'
