No running gui tests in CI as it's headless

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,9 @@ jobs:
       JVM_OPTS: -Xmx3200m
       TERM: dumb
 
+      # No GUI
+      NO_GUI: 1
+
     steps:
       - checkout
 
@@ -30,7 +33,7 @@ jobs:
             - v1-dependencies-{{ checksum "build.gradle" }}
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
-
+      
       - run: gradle dependencies
 
       - save_cache:
